[gd_scene load_steps=3 format=3 uid="uid://ddytulff8t04j"]

[ext_resource type="Script" uid="uid://dt3m5wtv36ndv" path="res://Script/pause.gd" id="1_o80xk"]
[ext_resource type="Theme" uid="uid://dh5p3g0bd3nr5" path="res://Assets/ui_theme.tres" id="2_l2mpd"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_o80xk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.369792
anchor_top = 0.191358
anchor_right = 0.630208
anchor_bottom = 0.808642
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.129412)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.433333
anchor_top = 0.45
anchor_right = 0.566667
anchor_bottom = 0.55
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_l2mpd")
metadata/_edit_use_anchors_ = true

[node name="Resume" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume"
alignment = 0

[node name="SAVE" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Options" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Options"
alignment = 0

[node name="Quit" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/SAVE" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
